<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/def_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ti_password"
        android:layout_marginTop="@dimen/child_margin_top"
        android:visibility="gone"
        app:hintEnabled="false">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:background="@drawable/edt_bg_selected"
            app:backgroundTint="@color/edit_text"
            android:maxLength="@integer/def_max"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/child_margin_top"
        app:hintEnabled="false">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_bg_selected"
            app:backgroundTint="@color/edit_text"
            android:maxLength="@integer/def_max"
            android:hint="@string/nickname"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ti_email"
        android:layout_marginTop="@dimen/child_margin_top"
        android:visibility="gone"
        app:hintEnabled="false">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_bg_selected"
            app:backgroundTint="@color/edit_text"
            android:maxLength="@integer/def_max"
            android:hint="@string/token"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ti_token"
        android:layout_marginTop="@dimen/child_margin_top"
        android:visibility="gone"
        app:hintEnabled="false">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_bg_selected"
            app:backgroundTint="@color/edit_text"
            android:maxLength="@integer/def_max"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_reset_password"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ti_password2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/reset_password"
        android:textColor="@color/dialog_color" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_reset_password"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_message"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_margin"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>